syntax = "proto3";

package pb;

option go_package = "./;pb";

import "common.proto";

message UnreadNotifications {
    int64 highLightCount = 1;
    int64 notificationCount = 2;
}

message JoinResponse {
  message State {
    repeated ClientEvent events = 1;
  }
  message Timeline {
    repeated ClientEvent events = 1;
    bool limited = 2;
    string prevBatch = 3;
  }
  message Ephemeral {
    repeated ClientEvent events = 1;
  }
  message AccountData {
    repeated ClientEvent events = 1;
  }

  State state = 1;
  Timeline timeline = 2;
  Ephemeral ephemeral = 3;
  AccountData accountData = 4;
  UnreadNotifications unread = 5;
}

message InviteResponse {
  message InviteState {
    repeated ClientEvent events = 1;
  }
  InviteState inviteState = 1;
}

message LeaveResponse {
  message State {
    repeated ClientEvent events = 1;
  }
  message Timeline {
    repeated ClientEvent events = 1;
    bool limited = 2;
    string prevBatch = 3;
  }

  State state = 1;
  Timeline timeline = 2;
}

message Pusher {
  string userName = 1;
  string deviceID = 2;
  string pushKey = 3;
  int64 pushKeyTs = 4;
  string kind = 5;
  string appId = 6;
  string appDisplayName = 7;
  string deviceDisplayName = 8;
  string profileTag = 9;
  string lang = 10;
  bool append = 11;
  bytes data = 12;
}

message Pushers {
  repeated Pusher pushers = 1;
}

message PushCondition {
  string kind = 1;
  string key = 2;
  string pattern = 3;
  string is = 4;
}

message PushRule {
  bytes Actions = 1;
  bool default = 2;
  bool enabled = 3;
  string ruleId = 4;
  repeated PushCondition conditions = 5;
  string pattern = 6;
}

message Rules {
  repeated PushRule content = 1;
  repeated PushRule override = 2;
  repeated PushRule room = 3;
  repeated PushRule sender = 4;
  repeated PushRule underRide = 5;
}
