syntax = "proto3";

package pb;

option go_package = "./;pb";

import "common.proto";
import "sync.proto";

service SyncServer {
  rpc SyncLoad (SyncProcessReq) returns (SyncProcessRsp) {}
  rpc SyncProcess (SyncProcessReq) returns (SyncProcessRsp) {}
  rpc GetPusherByDevice (GetPusherByDeviceReq) returns (Pushers) {}
  rpc GetPushRuleByUser (GetPusherRuleByUserReq) returns (Rules) {}
  rpc GetPushDataBatch (GetPushDataBatchReq) returns (GetPushDataBatchRsp) {}
  rpc GetPusherBatch (GetPusherBatchReq) returns (GetPusherBatchRsp) {}
  rpc OnReceipt (OnReceiptReq) returns (Empty) {}
  rpc OnTyping (OnTypingReq) returns (Empty) {}
  rpc OnUnread (OnUnreadReq) returns (OnUnreadRsp) {}
}

message SyncRoom {
  string roomID = 1;
  string roomState = 2;
  int64 start = 3;
  int64 end = 4;
}

message SyncProcessReq {
  string requestType = 1;
  repeated SyncRoom inviteRooms = 2;
  repeated SyncRoom joinRooms = 3;
  repeated SyncRoom leaveRooms = 4;
  repeated string joinedRooms = 5;
  string userID = 6;
  string deviceID = 7;
  int64 receiptOffset = 8;
  int64 MaxReceiptOffset = 9;
  bool isHuman = 10;
  int32 limit = 11;
  int32 syncInstance = 12;
  bool isFullSync = 13;
  string traceID = 14;
  int32 slot = 15;
}

message SyncProcessRsp {
  message Rooms {
    map<string, JoinResponse> join = 1;
    map<string, InviteResponse> invite = 2;
    map<string, LeaveResponse> leave = 3;
  }

  Rooms rooms = 1;
  int64 maxReceiptOffset = 2;
  bool allLoaded = 3;
  repeated string newUsers = 4;
  bool ready = 5;
  map<string, int64> maxRoomOffset = 6;
}

message GetPusherByDeviceReq {
  string userID = 1;
  string deviceID = 2;
}

message GetPusherRuleByUserReq {
  string userID = 1;
  string deviceID = 2;
}

message GetPushDataBatchReq {
  repeated string users = 1;
  uint32 slot = 2;
}

message RespPushData {
  Pushers pushers = 1;
  Rules rules = 2;
}

message GetPushDataBatchRsp {
  map<string, RespPushData> data = 1;
}

message GetPusherBatchReq {
  repeated string users = 1;
  uint32 slot = 2;
}

message GetPusherBatchRsp {
  map<string, Pushers> data = 1;
}

message OnReceiptReq {
  string userID = 1;
  string deviceID = 2;
  string roomID = 3;
  string receiptType = 4;
  string eventID = 5;
}

message OnTypingReq {
  string type = 1;
  string roomID = 2;
  string userID = 3;
}

message OnUnreadReq {
  repeated string joinRooms = 1;
  string userID = 2;
  uint32 syncInstance = 3;
}

message OnUnreadRsp {
  int64 count = 1;
}
